# footpedal_hid_device

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_pedal_for_return_value.cpp
hid_foot_pedal/: foot_pedal.cpp  foot_pedal.h
